--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -10,7 +10,7 @@
     padding: 20px;
     height: 100vh;
     display: flex;
-    width: 300px;
+    width: 250px;
     flex-direction: column;
     align-items: center;
     background-color: var(--primaryBlue);
