--- a/styles/cards.module.css
+++ b/styles/cards.module.css
@@ -6,7 +6,7 @@
     height: auto;
     width: 75vw;
     min-width: 300px;
-    max-width: 650px;
+    max-width: 750px;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
