--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -5,12 +5,11 @@
     align-items: center;
     justify-content: space-around;
     /* height: 100%; */
-    width: 330px;
-    padding: 5px;
+    width: 300px;
     align-self: center;
     /* border: 2px solid red; */
     box-sizing: border-box;
-    padding: 20px;
+    /* padding: 20px; */
 
 }
 
